# short_url

./: .env.example  .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: django-tests.yml
common/: decorators.py  utils.py
main/: settings.py  urls.py
shorturls/: forms.py  models.py  services.py  urls.py  views.py
shorturls/migrations/: 0001_initial.py  0002_utm.py  0003_shorturl_remarks.py  0004_alter_shorturl_created_by_alter_utm_short_url.py
shorturls/tests/: test_models.py
src/scripts/: copyShortUrl.js  input.js
src/styles/: input.css
static/assets/: app.js  styles.css
templates/: 404.html  base.html  home.html
templates/partial/: messages.html  nav.html
templates/shorturls/: base.html  detail.html  edit.html  get_context.html  index.html  new.html  password_page.html  redirect_page.html  redirect_url.html
templates/users/: sign_in.html  sign_up.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_models.py
