[project]
name = "short-url"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "django>=5.2.3",
    "psycopg[binary]>=3.2.9",
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
